# controllers/order_controller.go
@@ -18,6 +18,7 @@ type OrderController struct{}
 // @Tags orders
 // @Accept json
 // @Produce json
+// @Param Authorization header string true "Bearer {token}"
 // @Param page query int false "Page number (default: 1)"
 // @Param limit query int false "Number of items to retrieve per page (default: 10)"
 // @Success 200 {array} models.Order
@@ -55,6 +56,7 @@ func (controller OrderController) GetOrders(c *gin.Context) {
 // @Tags orders
 // @Accept json
 // @Produce json
+// @Param Authorization header string true "Bearer {token}"
 // @Param id path string true "Order ID"
 // @Success 200 {object} models.Order
 // @Failure 404 {object} models.ErrorResponse
@@ -95,6 +97,7 @@ func (controller OrderController) GetOrder(c *gin.Context) {
 // @Tags orders
 // @Accept json
 // @Produce json
+// @Param Authorization header string true "Bearer {token}"
 // @Param order body models.Order true "Order object"
 // @Success 200 {object} models.Order
 // @Failure 400 {object} models.ErrorResponse
@@ -202,6 +205,7 @@ func (controller OrderController) CreateOrderMulti(c *gin.Context) {
 // @Tags orders
 // @Accept json
 // @Produce json
+// @Param Authorization header string true "Bearer {token}"
 // @Param id path string true "Order ID"
 // @Param order body models.Order true "Order object"
 // @Success 200 {object} models.Order
@@ -254,6 +258,7 @@ func (controller OrderController) UpdateOrder(c *gin.Context) {
 // @Tags orders
 // @Accept json
 // @Produce json
+// @Param Authorization header string true "Bearer {token}"
 // @Param id path int true "Order ID"
 // @Success 200 {object} models.ErrorResponse
 // @Failure 401 {object} models.ErrorResponse
@@ -294,6 +299,7 @@ func (controller OrderController) DeleteOrder(c *gin.Context) {
 // @Tags orders
 // @Accept json
 // @Produce json
+// @Param Authorization header string true "Bearer {token}"
 // @Param query query string true "Customer ID"
 // @Param page query int false "Page number (default: 1)"
 // @Param limit query int false "Number of items to retrieve per page (default: 10)"
@@ -331,6 +337,7 @@ func (controller OrderController) SearchOrders(c *gin.Context) {
 // @Tags orders
 // @Accept json
 // @Produce json
+// @Param Authorization header string true "Bearer {token}"
 // @Success 200 {array} models.Order
 // @Failure 400 {object} models.ErrorResponse
 // @Failure 500 {object} models.ErrorResponse
@@ -359,4 +366,80 @@ func (controller OrderController) GetMyOrders(c *gin.Context) {
 	c.JSON(http.StatusOK, orders)
 }
 
-//update my order
+// update my order
+// @Summary Update my order
+// @Description Update an existing order placed by the authenticated user
+// @Tags orders
+// @Accept json
+// @Produce json
+// @Param Authorization header string true "Bearer {token}"
+// @Param id path string true "Order ID"
+// @Param order body models.Order true "Order object"
+// @Success 200 {object} models.Order
+// @Failure 404 {object} models.ErrorResponse
+// @Failure 400 {object} models.ErrorResponse
+// @Failure 500 {object} models.ErrorResponse
+// @Security BearerAuth
+// @Router /myorder/{id} [put]
+func (controller OrderController) UpdateMyOrder(c *gin.Context) {
+	userID, _, err := utils.ExtractData(c)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: err.Error()})
+		return
+	}
+
+	db, err := utils.Connect()
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: err.Error()})
+		return
+	}
+
+	var order models.Order
+	orderID, err := uuid.Parse(c.Param("id"))
+	if err != nil {
+		c.JSON(http.StatusBadRequest, models.ErrorResponse{Error: "Invalid order ID"})
+		return
+	}
+
+	result := db.Where("id = ? AND customer_id = ?", orderID, userID).First(&order)
+	if result.Error != nil {
+		c.JSON(http.StatusNotFound, models.ErrorResponse{Error: "Order not found"})
+		return
+	}
+
+	// Bind only the allowed fields
+	var updateOrder struct {
+		ProductID int `json:"productId" form:"productId" binding:"required"`
+		Quantity  int `json:"quantity" form:"quantity" binding:"required"`
+	}
+
+	err = c.ShouldBind(&updateOrder)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, models.ErrorResponse{Error: err.Error()})
+		return
+	}
+
+	if order.ProductID == updateOrder.ProductID && order.Quantity == updateOrder.Quantity {
+		c.JSON(http.StatusBadRequest, models.ErrorResponse{Error: "No changes to update"})
+		return
+	}
+
+	// Check if product with specified ID exists
+	var product models.Product
+	result = db.First(&product, updateOrder.ProductID)
+	if result.Error != nil {
+		c.JSON(http.StatusBadRequest, models.ErrorResponse{Error: "Product not found"})
+		return
+	}
+
+	order.ProductID = updateOrder.ProductID
+	order.Quantity = updateOrder.Quantity
+
+	result = db.Save(&order)
+	if result.Error != nil {
+		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: result.Error.Error()})
+		return
+	}
+
+	c.JSON(http.StatusOK, order)
+}
